--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 This is a personal website in which I will store my programming portfolio,
 containing personal and academic projects.
 
-I will make posts updating progress on personal projects, such as Togethr. 
+I will make posts updating progress on personal projects, such as Togethr.
+Togethr is a social networking application centered around spontaneous
+human connection, with the goal of connecting people with shared interests.
 
 Eventually, I will create a devblog separate from this website for the dev
 progress on Togethr and weekly(?) updates. 
