--- a/README
+++ b/README
@@ -10,7 +10,7 @@ progress on Togethr and weekly(?) updates.
 
 First and foremost, this is a tech blog and I will write blog posts about
 current tech, large trends, and specific interests such as Tesla's autopilot
-and Google's new phone.
+and Google's Pixel.
 
 I will gradually find a central focus that my blogs can be about.
 
