--- a/README
+++ b/README
@@ -12,6 +12,6 @@ First and foremost, this is a tech blog and I will write blog posts about
 current tech, large trends, and specific interests such as Tesla's autopilot
 and Google's Pixel.
 
-I will gradually find a central focus that my blogs can be about.
+I will gradually find a central focus that my blog can center around.
 
 -Tyler
