--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Eventually, I will create a devblog separate from this website for the dev
 progress on Togethr and weekly(?) updates. 
 
 First and foremost, this is a tech blog and I will write blog posts about
-current tech, large trends, and specific interests such as Tesla's autopilot
+current tech, large trends, and specific topics such as Tesla's autopilot
 and Google's Pixel.
 
 I will gradually find a central focus that my blog can center around.
